--- a/todoapp/build.gradle
+++ b/todoapp/build.gradle
@@ -1,10 +1,12 @@
+import com.android.build.gradle.internal.tasks.databinding.DataBindingExportBuildInfoTask
+
 buildscript {
     repositories {
         jcenter()
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.0'
+        classpath 'com.android.tools.build:gradle:3.5.0-beta01'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -38,13 +40,37 @@ ext {
     mockitoVersion = '1.10.19'
     powerMockito = '1.6.2'
     hamcrestVersion = '1.3'
-    runnerVersion = '1.0.1'
-    rulesVersion = '1.0.1'
     espressoVersion = '3.0.2'
 
     // Architecture Components dependencies
-    roomVersion = "1.1.1"
     archLifecycleVersion = "1.1.1"
+
+    // Androidx
+    appCompat = "1.1.0-alpha05"
+    cardView = "1.0.0"
+    material = "1.1.0-alpha06"
+    recyclerView = "1.1.0-alpha05"
+    legacySupport = "1.0.0"
+    roomRunTime = "2.1.0-beta01"
+    roomCompiler = "2.0.0-rc01"
+    lifecycleExtensions = "2.2.0-alpha01"
+    lifecycleCompiler = "2.0.0-rc01"
+
+    coreTesting = "2.0.0-rc01"
+    runnerVersion = '1.1.0'
+    rulesVersion = '1.0.1'
+    roomTestingVersion = "2.0.0-rc01"
+
+    espressoCore = "3.1.0"
+    espressoContrib = "3.1.0"
+    espressoIntents = "3.1.0"
+    espressoConcurrent = "3.1.0"
+    espressoIdlingResource = "3.1.1"
+
+    annotations = "1.0.0"
+    coreCore = "1.2.0-alpha01"
+
+
 }
 
 /*
@@ -60,7 +86,7 @@ ext {
  * and delete the files right after it creates them.
  */
 subprojects {
-    tasks.withType(com.android.build.gradle.internal.tasks.databinding.DataBindingExportBuildInfoTask) { task ->
+    tasks.withType(DataBindingExportBuildInfoTask) { task ->
         if (task.name.endsWith("AndroidTest")) {
             task.finalizedBy(tasks.create("${task.name}Workaround") << {
                 task.output.deleteDir()
