--- a/todoapp/app/src/main/AndroidManifest.xml
+++ b/todoapp/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
   ~ limitations under the License.
   -->
 
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.android.architecture.blueprints.todoapp">
 
@@ -44,5 +45,4 @@
                 android:value=".tasks.TasksActivity" />
         </activity>
     </application>
-
 </manifest>
