--- a/todoapp/build.gradle
+++ b/todoapp/build.gradle
@@ -1,10 +1,12 @@
+import com.android.build.gradle.internal.tasks.databinding.DataBindingExportBuildInfoTask
+
 buildscript {
     repositories {
         jcenter()
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.0'
+        classpath 'com.android.tools.build:gradle:3.5.0-beta03'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -27,21 +29,22 @@ ext {
     // Sdk and tools
     // Support library and architecture components support minSdk 14 and above.
     minSdkVersion = 14
-    targetSdkVersion = 26
-    compileSdkVersion = 26
-    buildToolsVersion = '26.0.2'
+    targetSdkVersion = 28
+    compileSdkVersion = 28
+    buildToolsVersion = '28.0.3'
 
     // App dependencies
-    supportLibraryVersion = '26.1.0'
-    guavaVersion = '18.0'
+    supportLibraryVersion = '28.0.0'
+    guavaVersion = '22.0-android'
     junitVersion = '4.12'
     mockitoVersion = '1.10.19'
     powerMockito = '1.6.2'
     hamcrestVersion = '1.3'
     runnerVersion = '1.0.1'
     rulesVersion = '1.0.1'
-    espressoVersion = '3.0.1'
-    roomVersion = "1.0.0"
+    espressoVersion = '3.0.2'
+    roomVersion = "1.1.1"
+    androidxSupportVersion = "1.0.0"
 }
 
 /*
@@ -57,7 +60,7 @@ ext {
  * and delete the files right after it creates them.
  */
 subprojects {
-    tasks.withType(com.android.build.gradle.internal.tasks.databinding.DataBindingExportBuildInfoTask) { task ->
+    tasks.withType(DataBindingExportBuildInfoTask) { task ->
         if (task.name.endsWith("AndroidTest")) {
             task.finalizedBy(tasks.create("${task.name}Workaround") << {
                 task.output.deleteDir()
